BASIS-37210 - Botão exportação

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PrimeNG - ULTIMA</title>
+    <title>Madre - Sistema de Gestão Hospitalar</title>
     <base href="/">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
