--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,8 +11,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="icon" type="image/x-icon" href="assets/layout/images/favicon.png">
 
-  <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue-grey.css">
-  <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue-grey.css">
+  <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-teal.css">
+  <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-teal.css">
 </head>
 <body>
     <app-root>
