--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="icon" type="image/x-icon" href="assets/layout/images/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/layout/images/favicon.ico">
 
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-teal.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-teal.css">
