Correções no template

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,6 +12,10 @@
   <link rel="icon" type="image/x-icon" href="assets/layout/images/favicon.ico">
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/teal/theme-light.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-light.css">
+
+  <link id="layout-css" rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
+
 </head>
 <body>
     <app-root>
